# needle

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  setup.py
examples/: check_result.py  prompts  qwen2_example.py  qwen2_reference.py
needle/: __init__.py
needle/engine/: engine.py
needle/framework/: __init__.py  module.py  tensor.py
needle/model_executor/layers/: vocab_embedding.py
needle/model_executor/model_loader/: huggingface_loader.py  registry.py
needle/model_executor/models/: __init__.py  qwen2.py
needle/module/: module.py
src/framework/: pybind.cpp  tensor.cpp  tensor.h
tests/: test_cuda.py
